--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ footer{
 .peluquero-card{
 border: solid 2px royalblue;
 width: 400px;
-height: 440px;
+height: 465px;
 background-color: lightblue;
 color: rgb(112, 147, 252);
 box-shadow: 4px 4px 4px 2px rgb(8, 7, 7);
@@ -104,4 +104,69 @@ th, td{
 /* CSS del SweetAlert */
 .custom-button{
   background-color: rgb(120, 148, 233);
+}
+
+/* Responsive */
+@media (min-width: 320px) and (max-width: 550px){
+  .peluquero-card {
+    width: 300px;
+  }
+  #peluqueros-container img {
+    width: 270px;
+  }
+
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+
+  thead {
+    display: none;
+  }
+
+  tr {
+    margin-bottom: 10px;
+    border: 2px solid blue;
+    padding: 10px;
+  }
+
+  td {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  td:before {
+    content: attr(data-label);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+}
+
+@media (min-width: 551px) and (max-width: 750px){
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+
+  thead {
+    display: none;
+  } 
+
+  tr {
+    margin-bottom: 10px;
+    border: 2px solid blue;
+    padding: 10px;
+  }
+
+  td {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  td:before {
+    content: attr(data-label);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
